--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </style>
 </head>
 <body>
-  <h1>Gabriel e Giulia <br> Nosso amor em Números ❤️</h1>
+  <h1>Gabriel e Giulia <br> Nosso amor em Números desde 14/07/2016 ❤️</h1>
   <p class="heart">💖 Desde o dia que começamos nosso namoro 💖</p>
   <div class="contador-container">
     <div id="contador" class="contador-box">Carregando...</div>
